--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,6 +1,7 @@
-.exp {
+.technical-experience {
   color: white;
   text-transform: uppercase;
   font-size: 27px;
   margin-top: 80px;
+  text-align: center;
 }
