Update about page animations.

--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -38,32 +38,18 @@
   padding-top: 150px;
   padding-bottom: 30px;
 
+  .fadein {
+    opacity: 0;
+
+    @include animation(fadein 2s);
+    @include animation-fill-mode(forwards);
+  }
+
   .about-image {
+    @include animation-delay(0.3s);
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    // background-image: url('../../public/images/about-bg-md.png');
-    // background-color: #cccccc; /* Used if the image is unavailable */
-    // height: 500px; /* You must set a specified height */
-    // background-position: center; /* Center the image */
-    // background-repeat: no-repeat; /* Do not repeat the image */
-    // background-size: cover; /* Resize the background image to cover the entire container */
-    // position: absolute;
-
-    // .bg-image {
-    //   height: 500px;
-    //   position: absolute;
-    //   margin-top: 20em;
-    //   opacity: 15%;
-    // }
-
-    // .fg-image {
-    //   height: 500px;
-    //   position: absolute;
-    //   margin-top: 20em;
-    //   // opacity: 15%;
-    // }
 
     .image {
       height: 550px;
@@ -72,9 +58,6 @@
 
       &.bg {
         opacity: 15%;
-      }
-
-      &.fg {
       }
     }
   }
@@ -89,13 +72,6 @@
     margin-top: 10vh;
     color: $white;
     text-align: left;
-  }
-
-  .fadein {
-    opacity: 0;
-
-    @include animation(fadein 2s);
-    @include animation-fill-mode(forwards);
   }
 
   .title {
