Update SkillCard components on about page.

--- a/styles/components/about/_skillcard.scss
+++ b/styles/components/about/_skillcard.scss
@@ -2,11 +2,12 @@
   height: 9em;
   width: 10em;
   // border: 1px solid #CCC;
-  margin: 40px 0;
+  // margin: 40px 0;
   perspective: 600px;
 
   transition: transform 1s;
-  transform-style: preserve-3
+  transform-style: preserve-3d;
+  display: flex;
 }
 
 .skill-card {
