Update flip skill cards to show additional details on card back.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 @import './pages/home';
 
 @import './components/about/skillcard';
+@import './components/about/aboutme';
 
 $pattern-foreground-opacity: 0.25;
 $pattern-foreground: $limed-spruce;
