--- a/styles/components/about/_skillcard.scss
+++ b/styles/components/about/_skillcard.scss
@@ -1,4 +1,8 @@
 .skill-card-container {
+  margin: 20px;
+}
+
+.skill-card {
   height: 9em;
   width: 10em;
   perspective: 600px;
@@ -8,7 +12,7 @@
   display: flex;
 }
 
-.skill-card {
+.skill-card-inner {
   width: 100%;
   height: 100%;
   transition: transform 1s;
