--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -27,9 +27,18 @@
 }
 
 .about-page {
+  padding-top: 150px;
+  padding-bottom: 30px;
+
   .left-side {
     // margin-top: 10vh;
-    color: black;
+    color: $white;
+    text-align: center;
+  }
+
+  .right-side {
+    margin-top: 10vh;
+    color: $white;
     text-align: left;
   }
 
@@ -44,6 +53,7 @@
     @include animation-delay(0.7s);
     font-size: 42px;
     font-weight: bold;
+    margin-bottom: 55px;
   }
 
   .subtitle {
@@ -56,8 +66,43 @@
     font-size: 18px;
   }
 
+  .aboutme {
+    @include animation-delay(3.6s);
+    margin-top: 55px;
+  }
+
   @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
   }
+}
+
+.skills-icons {
+  font-size: 4.5em !important;
+  margin: 15px !important;
+  opacity: 0.93 !important;
+  border: 1.7px solid #4a79f9cc !important;
+  vertical-align: middle !important;
+  text-align: center !important;
+  border-radius: 5px !important;
+  display: table !important;
+  box-shadow: rgba(41, 8, 228, 0.753) 4px 5px 4px 3px !important;
+  overflow: hidden !important;
+  transition: all 0.4s ease 0s !important;
+}
+
+@media (max-width: 767px) {
+  .skills-icons {
+    margin: 10px !important;
+  }
+}
+
+.skills-icons:hover {
+  transform: scale(1.05) !important;
+  overflow: hidden !important;
+  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+}
+.skills-icon-images {
+  padding: 20px !important;
+  line-height: 1.6 !important;
 }
