--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -1,27 +1,13 @@
-$primary-100: #e76969;
-$primary-200: #e24444;
-$primary-300: #9e2f2f;
+$black: #000000;
+$bunting: #140e42;
+$gallery: #ececec;
+$golden-grass: #dba919;
+$gulf-blue: #0e045d;
+$limed-spruce: #354a4c;
+$san-marino: #4975a8;
+$white: #ffffff;
 
-$complement-100: #70878a;
-$complement-200: #4D6A6D;
-$complement-300: #354a4c;
-
-$red-100: #e76969;
-$red-200: #e24444;
-$red-300: #9e2f2f;
-
-$blue-100: #70878a;
-$blue-200: #4D6A6D;
-$blue-300: #354a4c;
-
-$green-100: #81cf8c;
-$green-200: #62C370;
-$green-300: #44884e;
-
-$grey-scale-light-100: #ececec;
-$grey-scale-light-200: #e8e8e8;
-$grey-scale-light-300: #a2a2a2;
-
-$grey-scale-dark-100: #4e535a;
-$grey-scale-dark-200: #222831;
-$grey-scale-dark-300: #171c22;
+$black-pearl-faded: #09051d2c;
+$blue-charcoal-faded: #00051da6;
+$san-juan-faded: #344c795d;
+$stratos-faded: #000b4269;
