--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,18 +5,17 @@
 @import './components/header';
 @import './pages/resume';
 @import './pages/about';
+@import './pages/home';
 
 $pattern-foreground-opacity: 0.25;
-$pattern-foreground: $complement-300;
-
-$pattern-background: $grey-scale-light-100;
-
+$pattern-foreground: $limed-spruce;
+$pattern-background: $gallery;
 $pattern-item-size: 5;
 
 html, body {
   width: 100%;
   font-family: 'Montserrat', 'Helvetica';
-  background-color: #00051da6;
+  background-color: $blue-charcoal-faded;
   background-image:
     url(
       "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='#{$pattern-item-size}' height='#{$pattern-item-size}' viewBox='0 0 4 4'%3E%3Cpath fill='#{encodecolor($pattern-foreground)}' fill-opacity='#{$pattern-foreground-opacity}' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"
@@ -26,7 +25,7 @@ html, body {
 
 .base-page {
   padding-top: 150px;
-  color: whte;
+  color: $white;
 }
 
 .fixed {
@@ -39,7 +38,7 @@ html, body {
 
 .self-typed {
   font-size: 31px;
-  color: white;
+  color: $white;
   font-weight: bold;
   letter-spacing: 2px;
 }
