--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -3,7 +3,7 @@
   padding-top: 110px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: white !important;
+  color: $white !important;
 }
 
 .resume {
@@ -40,14 +40,14 @@
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #4975a8;
+  border-left: 2px solid $san-marino;
   position: relative;
 }
 
 .resume .resume-item .resume-title {
   line-height: 18px;
   font-size: 0.9em;
-  background: #344c795d;
+  background: $san-juan-faded;
   padding: 8px 15px;
   display: inline-block;
   font-weight: 600;
@@ -76,6 +76,6 @@
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
-  border: 2px solid #496aa8;
+  background: $gulf-blue;
+  border: 2px solid $san-marino;
 }
