--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -8,6 +8,12 @@ $san-marino: #4975a8;
 $white: #ffffff;
 
 $black-pearl-faded: #09051d2c;
+$blue-faded: #2908e4c0;
 $blue-charcoal-faded: #00051da6;
+$cornflower-faded: #89b8e6a2;
+$dodger-blue-faded: #4a79f9cc;
+$endeavour-faded: #044fa823;
+$green-faded: #00ff00ab;
 $san-juan-faded: #344c795d;
+$seagull-faded: #73ade6e1;
 $stratos-faded: #000b4269;
