--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -1,9 +1,131 @@
+@import 'react-vertical-timeline-component/style.min.css';
+
 .resume-section {
   position: relative !important;
   padding-top: 110px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
   color: $white !important;
+}
+
+.card {
+  position: relative;
+  background: $white;
+  border-radius: 0.25em;
+  padding: 1em;
+
+}
+
+.vertical-timeline-element-icon {
+  width: 16px !important;
+  height: 16px !important;
+  margin-left: -8px !important;
+  top: 23px;
+  background: #0e045d;
+  border: 2px solid #4975a8;
+  box-shadow: none !important;
+}
+
+.vertical-timeline-element-content {
+  background: $san-juan-faded;
+  box-shadow: 0 3px 0 #133f6352;
+  color: $white;
+}
+
+.card-text {
+  line-height: 18px;
+  font-size: 12px;
+  // padding: 8px 15px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 3px;
+  display: flex;
+
+  .location {
+    position: absolute;
+    right: 25px;
+    font-style: oblique;
+  }
+
+  .company {
+    float: left;
+    font-size: 14px;
+  }
+
+  .title {
+    font-style: oblique;
+  }
+
+  .date {
+    position: absolute;
+    right: 25px;
+    font-style: oblique;
+  }
+}
+
+.timeline {
+  width: 100% !important;
+  
+  &::before {
+    background: #4975a8;
+  }
+}
+
+ul {
+  font-size: 12px;
+  // letter-spacing: 1.0px;
+  padding-left: 16px;
+  text-align: justify;
+  margin-top: 15px;
+
+  li {
+    margin-bottom: 10px;
+  }
+}
+
+.item {
+  //padding: 0 0 10px 25px;
+    margin-top: -2px;
+  //  position: relative;
+}
+
+// .timeline::before {
+//   background: #4975a8;
+// }
+
+// .icon {
+//   width: 16px !important;
+//   height: 16px !important;
+//   margin-left: -8px !important;
+//   top: 23px;
+//   background: #0e045d;
+//   border: 2px solid #4975a8;
+// }
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  right: 100%;
+  height: 0;
+  width: 0;
+  border: 7px solid transparent;
+  border-right: 7px solid #fff;
+}
+
+.resume-page {
+  padding-top: 150px;
+  padding-bottom: 30px;
+
+  .resume {
+    padding-right: 80px;
+
+    .header {
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 25px;
+    }
+  }
 }
 
 .resume {
@@ -61,7 +183,7 @@
 
 .resume .resume-item ul li {
   padding-bottom: 10px;
-  list-style: none;
+  // list-style: none;
 }
 
 .resume .resume-item:last-child {
