--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -1,21 +1,5 @@
 @import 'react-vertical-timeline-component/style.min.css';
 
-.resume-section {
-  position: relative !important;
-  padding-top: 110px !important;
-  padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
-  color: $white !important;
-}
-
-.card {
-  position: relative;
-  background: $white;
-  border-radius: 0.25em;
-  padding: 1em;
-
-}
-
 .vertical-timeline-element-icon {
   width: 16px !important;
   height: 16px !important;
@@ -32,10 +16,13 @@
   color: $white;
 }
 
+.vertical-timeline-element-content-arrow {
+  border-right: 7px solid $san-juan-faded;
+}
+
 .card-text {
   line-height: 18px;
   font-size: 12px;
-  // padding: 8px 15px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 3px;
@@ -73,7 +60,6 @@
 
 ul {
   font-size: 12px;
-  // letter-spacing: 1.0px;
   padding-left: 16px;
   text-align: justify;
   margin-top: 15px;
@@ -84,23 +70,8 @@ ul {
 }
 
 .item {
-  //padding: 0 0 10px 25px;
     margin-top: -2px;
-  //  position: relative;
 }
-
-// .timeline::before {
-//   background: #4975a8;
-// }
-
-// .icon {
-//   width: 16px !important;
-//   height: 16px !important;
-//   margin-left: -8px !important;
-//   top: 23px;
-//   background: #0e045d;
-//   border: 2px solid #4975a8;
-// }
 
 .card::before {
   content: '';
@@ -126,78 +97,4 @@ ul {
       margin-bottom: 25px;
     }
   }
-}
-
-.resume {
-  padding-top: 10px;
-  padding-bottom: 50px;
-}
-
-.resume-left {
-  padding-right: 80px !important;
-}
-
-.resume-right {
-  padding-left: 80px !important;
-}
-
-@media (max-width: 767px) {
-  .resume-left {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-
-  .resume-right {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-}
-.resume .resume-title {
-  font-size: 2em;
-  font-weight: 700;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume .resume-item {
-  padding: 0 0 10px 25px;
-  margin-top: -2px;
-  border-left: 2px solid $san-marino;
-  position: relative;
-}
-
-.resume .resume-item .resume-title {
-  line-height: 18px;
-  font-size: 0.9em;
-  background: $san-juan-faded;
-  padding: 8px 15px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.resume .resume-item ul {
-  padding-left: 20px;
-  text-align: justify;
-}
-
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-  // list-style: none;
-}
-
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: $gulf-blue;
-  border: 2px solid $san-marino;
 }
