Update timeline on resume page. Style cleanup.

--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -38,13 +38,12 @@
   padding-top: 150px;
   padding-bottom: 30px;
 
-  .left-side {
-    // margin-top: 10vh;
+  .headline {
     color: $white;
     text-align: center;
   }
 
-  .right-side {
+  .details {
     margin-top: 10vh;
     color: $white;
     text-align: left;
