--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -1,18 +1,93 @@
 @import 'react-vertical-timeline-component/style.min.css';
 
+.resume-page {
+  padding-top: 150px;
+  padding-bottom: 30px;
+
+  .headline {
+    color: $white;
+    text-align: center;
+    margin-bottom: 75px;
+
+    .title {
+      font-size: 64px;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+  
+    .subtitle {
+      font-size: 24px;
+      white-space: pre-wrap;
+    }
+  }
+
+  .timeline {
+    width: 100% !important;
+    
+    &::before {
+      background: $san-marino
+    }
+  
+    .item {
+      margin-top: -2px;
+    
+      .card-text {
+        line-height: 18px;
+        font-size: 12px;
+        display: inline-block;
+        font-weight: 600;
+        margin-bottom: 3px;
+        display: flex;
+      
+        .location {
+          position: absolute;
+          right: 25px;
+          font-style: oblique;
+        }
+      
+        .company {
+          float: left;
+          font-size: 14px;
+        }
+      
+        .title {
+          font-style: oblique;
+        }
+      
+        .date {
+          position: absolute;
+          right: 25px;
+          font-style: oblique;
+        }
+      }
+    
+      ul {
+        font-size: 12px;
+        padding-left: 16px;
+        text-align: justify;
+        margin-top: 15px;
+      
+        li {
+          margin-bottom: 10px;
+        }
+      }    
+    }  
+  }  
+}
+
 .vertical-timeline-element-icon {
   width: 16px !important;
   height: 16px !important;
   margin-left: -8px !important;
   top: 23px;
-  background: #0e045d;
-  border: 2px solid #4975a8;
+  background: $gulf-blue;
+  border: 2px solid $san-marino;
   box-shadow: none !important;
 }
 
 .vertical-timeline-element-content {
   background: $san-juan-faded;
-  box-shadow: 0 3px 0 #133f6352;
+  box-shadow: 0 3px 0 $chathams-blue-faded;
   color: $white;
 }
 
@@ -20,81 +95,4 @@
   border-right: 7px solid $san-juan-faded;
 }
 
-.card-text {
-  line-height: 18px;
-  font-size: 12px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 3px;
-  display: flex;
 
-  .location {
-    position: absolute;
-    right: 25px;
-    font-style: oblique;
-  }
-
-  .company {
-    float: left;
-    font-size: 14px;
-  }
-
-  .title {
-    font-style: oblique;
-  }
-
-  .date {
-    position: absolute;
-    right: 25px;
-    font-style: oblique;
-  }
-}
-
-.timeline {
-  width: 100% !important;
-  
-  &::before {
-    background: #4975a8;
-  }
-}
-
-ul {
-  font-size: 12px;
-  padding-left: 16px;
-  text-align: justify;
-  margin-top: 15px;
-
-  li {
-    margin-bottom: 10px;
-  }
-}
-
-.item {
-    margin-top: -2px;
-}
-
-.card::before {
-  content: '';
-  position: absolute;
-  top: 10px;
-  right: 100%;
-  height: 0;
-  width: 0;
-  border: 7px solid transparent;
-  border-right: 7px solid #fff;
-}
-
-.resume-page {
-  padding-top: 150px;
-  padding-bottom: 30px;
-
-  .resume {
-    padding-right: 80px;
-
-    .header {
-      font-size: 28px;
-      font-weight: bold;
-      margin-bottom: 25px;
-    }
-  }
-}
