--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -10,6 +10,7 @@ $white: #ffffff;
 $black-pearl-faded: #09051d2c;
 $blue-faded: #2908e4c0;
 $blue-charcoal-faded: #00051da6;
+$chathams-blue-faded: #133f6352;
 $cornflower-faded: #89b8e6a2;
 $dodger-blue-faded: #4a79f9cc;
 $endeavour-faded: #044fa823;
