Add Cambay font. Add new home page image.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,13 +14,17 @@ $pattern-item-size: 5;
 
 html, body {
   width: 100%;
-  font-family: 'Montserrat', 'Helvetica';
+  font-family: 'Cambay', 'Montserrat', 'Helvetica';
   background-color: $blue-charcoal-faded;
   background-image:
     url(
       "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='#{$pattern-item-size}' height='#{$pattern-item-size}' viewBox='0 0 4 4'%3E%3Cpath fill='#{encodecolor($pattern-foreground)}' fill-opacity='#{$pattern-foreground-opacity}' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"
     ),
     url("../public/images/background-index.png");
+}
+
+.container {
+  max-width: 70%;
 }
 
 .base-page {
@@ -37,7 +41,7 @@ html, body {
 }
 
 .self-typed {
-  font-size: 31px;
+  font-size: 44px;
   color: $white;
   font-weight: bold;
   letter-spacing: 2px;
