--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -26,8 +26,9 @@
 
   perspective: 1000px;
   color: white;
-  width: 400px;
-  position: relative;
+  width: 500px;
+  position: absolute;
+  right: 5%;
 
   &-content {
     position: absolute;
@@ -47,11 +48,19 @@
   max-width: 100%;
 }
   
-.hero-welcome-text > h1 {
+.hero-welcome-headline > h1 {
   color: white;
   text-transform: uppercase;
-  font-size: 27px;
+  font-size: 56px;
   margin-top: 80px;
+  font-weight: bold;
+}
+
+.hero-welcome-text > h3 {
+  color: white;
+  // text-transform: uppercase;
+  font-size: 24px;
+  margin-top: 20px;
 }
   
 .hero-welcome-bio {
@@ -95,12 +104,12 @@
 }
 
 .shadow-custom {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-  border: 2px solid #3bace5;
+  // width: 100%;
+  // height: 100%;
+  // position: absolute;
+  // top: 0;
+  // box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
+  // border: 2px solid #3bace5;
 
   .shadow-inner {
     width: 100%;
