--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -2,6 +2,7 @@
   color: $white;
   margin-top: 100px;
   text-align: center;
+  margin-top: 280px;
 
   .tagline {
     margin: 0 auto 25px auto;
@@ -24,6 +25,10 @@
 
     h4 {
       font-weight: bold;
+    }
+
+    p {
+      font-size: 18px;
     }
   }
 
