--- a/styles/shared/_fonts.scss
+++ b/styles/shared/_fonts.scss
@@ -25,3 +25,24 @@
     font-weight: normal;
     font-style: italic;
 }
+
+@font-face {
+    font-family: 'Cambay';
+    src: url('/fonts/Cambay-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cambay';
+    src: url('/fonts/Cambay-Bold.ttf');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cambay';
+    src: url('/fonts/Cambay-Italic.ttf');
+    font-weight: normal;
+    font-style: italic;
+}
