--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -15,6 +15,9 @@ $cornflower-faded: #89b8e6a2;
 $dodger-blue-faded: #4a79f9cc;
 $endeavour-faded: #044fa823;
 $green-faded: #00ff00ab;
+$mariner-faded: #2b72d4a6;
+$matisse-faded: #1d5390f0;
+$royal-blue-faded: #4583eaa8;
 $san-juan-faded: #344c795d;
 $seagull-faded: #73ade6e1;
 $stratos-faded: #000b4269;
