--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -16,6 +16,10 @@
   width: 100%;
   padding: 150px 0 0;
 }
+
+.hero-container {
+  padding-bottom: 15em;
+}
   
 .hero-section{
   h2 {
@@ -26,21 +30,22 @@
 
   perspective: 1000px;
   color: white;
-  width: 500px;
+  width: 110%;
   position: absolute;
-  right: 5%;
+  right: 1em;
+  top: -10%;
 
-  &-content {
-    position: absolute;
-    bottom: 20px;
-    width: 360px;
-    left: 6%;
-    z-index: 1;
+  // &-content {
+  //   position: absolute;
+  //   bottom: 20px;
+  //   width: 360px;
+  //   left: 6%;
+  //   z-index: 1;
 
-    &-intro {
-      font-size: 17px;
-    }
-  }
+  //   &-intro {
+  //     font-size: 17px;
+  //   }
+  // }
 }
   
 .image {
@@ -48,40 +53,49 @@
   max-width: 100%;
 }
   
-.hero-welcome-headline > h1 {
-  color: white;
-  text-transform: uppercase;
-  font-size: 56px;
-  margin-top: 80px;
-  font-weight: bold;
+.hero-welcome-headline {
+  margin-bottom: 20px;
+
+  h1 {
+    color: white;
+    text-transform: uppercase;
+    font-size: 56px;
+    margin-top: 80px;
+    font-weight: bold;
+    // margin-bottom: 20px
+  }
 }
 
-.hero-welcome-text > h3 {
-  color: white;
-  // text-transform: uppercase;
-  font-size: 24px;
-  margin-top: 20px;
+.hero-welcome-text {
+  margin-bottom: 20px;
+
+  h3 {
+    color: white;
+    // text-transform: uppercase;
+    font-size: 24px;
+    margin-top: 20px;
+  }
 }
   
-.hero-welcome-bio {
-  margin-top: 20px;
-  color: white;
+// .hero-welcome-bio {
+//   margin-top: 20px;
+//   color: white;
 
-  .fa-stack {
-    font-size: 28px;
-  }
+//   .fa-stack {
+//     font-size: 28px;
+//   }
 
-  .list-inline-item {
-    > a {
-      color: #373737;
-    }
-  }
-}
+//   .list-inline-item {
+//     > a {
+//       color: #373737;
+//     }
+//   }
+// }
 
 .hero-welcome-wrapper {
   justify-content: flex-end;
-
 }
+
 
 @media (max-width: 991px) {
   .hero-section {
@@ -97,28 +111,28 @@
   }
 }
 
-.background-image {
-  position: absolute;
-  width: 1762px;
-  height: 493px;
-}
+// .background-image {
+//   position: absolute;
+//   width: 1762px;
+//   height: 493px;
+// }
 
-.shadow-custom {
-  // width: 100%;
-  // height: 100%;
-  // position: absolute;
-  // top: 0;
-  // box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-  // border: 2px solid #3bace5;
+// .shadow-custom {
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   top: 0;
+//   box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
+//   border: 2px solid #3bace5;
 
-  .shadow-inner {
-    width: 100%;
-    height: 100%;
-    box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
-  }
-}
+//   .shadow-inner {
+//     width: 100%;
+//     height: 100%;
+//     box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
+//   }
+// }
 
-.shadow-custom-2 {
-  border: 2px solid #f37d49;
-  box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
-}
+// .shadow-custom-2 {
+//   border: 2px solid #f37d49;
+//   box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
+// }
