--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 @import './shared/colors';
 @import './shared/utils';
 @import './components/header';
+@import './components/footer';
 @import './pages/resume';
 @import './pages/about';
 @import './pages/home';
