--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -7,6 +7,7 @@ $limed-spruce: #354a4c;
 $san-marino: #4975a8;
 $white: #ffffff;
 
+$abbey-faded: #51575d38;
 $black-pearl-faded: #09051d2c;
 $blue-faded: #2908e4c0;
 $blue-charcoal-faded: #00051da6;
