--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,3 +1,14 @@
+@keyframes sway {
+  0%   { transform: translateX(0) translateY(0); }
+  50%  { transform: translateX(25px) translateY(-30px); }
+  100% { transform: translateX(0) translateY(0); }
+}
+
+.sway {
+  animation-name: sway;
+  animation-timing-function: linear;
+}
+
 .cover {
   // background-image: linear-gradient(45deg,#00aeef 0%,#096fb9 100%);
   overflow: hidden;
@@ -26,26 +37,41 @@
   display: flex;
   justify-content: center;
   align-items: center; 
-  right: 5em;
-}
-  
-.hero-section{
-  h2 {
-    color: white;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
+  // right: 5em;
+  // top: -5em;
 
-  perspective: 1000px;
-  color: white;
-  right: 1em;
+  // .hero-section {
+  //   h2 {
+  //     color: white;
+  //     font-weight: bold;
+  //     margin-bottom: 10px;
+  //   }
+  
+  //   perspective: 1000px;
+  //   color: white;
+  //   right: 1em;
+  
+    .image {
+      // width: auto;
+      // max-width: 120%;
+      position: absolute;
+      height: 700px;
+  
+      &.fg {
+        animation-duration: 15s;
+        animation-iteration-count: infinite;
+      }
+  
+      &.bg {
+        opacity: 15%;
+      }
+    // }  
+  }
 }
   
-.image {
-  width: auto;
-  max-width: 120%;
-}
+
   
+
 .hero-welcome-headline {
   margin-bottom: 20px;
 
@@ -130,3 +156,4 @@
 //   border: 2px solid #f37d49;
 //   box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
 // }
+
