--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -39,12 +39,45 @@
 }
 
 .hero-resume {
-  margin-top: 2em; // 1em;
+  margin-top: 4em; // 1em;
+  display: flex;
   
-  &.btn {
+  .btn {
     padding: 8px 22px;
     background-color: $matisse-faded;
     border: none;
     font-weight: bold;
+    border-radius: 5px;
+    margin-top: 0 auto;
+
+    .text {
+      top: 1px;
+      position: relative;
+    }
+  }
+
+  .profile-icons {
+    color: white;
+    margin: auto 0 auto 2em;
+    padding: 8px 22px;
+    border-radius: 5px;
+    transition: 0.5s ease-in;
+    text-decoration: none;
+
+    .icon {
+      font-size: 28px;
+      vertical-align: middle;
+    }
+
+    .text {
+      vertical-align: bottom;
+      margin-left: 7px;
+    }
+
+    &:hover {
+      background-color: $san-juan-faded;
+      transition: 0.5s ease-in;
+      cursor: pointer;
+    }
   }
 }
