--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -122,15 +122,41 @@
       line-height: 1.6;
       transition: all 0.4s ease 0s;
       @include box-shadow(2px 3px 2px 1px $endeavour-faded);
+      height: 2em;
+      // transform: rotateY(180deg);
     
-      .icon {
-        line-height: 2;
+      .skill-container {
+  
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+
+        &.flipped {
+          background-color: $endeavour-faded;
+          height: 100%;
+          // transition: transform 0.8s;
+          // transform-style: preserve-3d;
+    
+
+          .skill-details {
+            .tech {
+              font-size: 24px;
+            }
+
+            .years-exp {
+              font-size: 20px;
+              font-style: italic;
+            }
+          }
+        }
       }
     
       &:hover {
         transform: scale(1.05);
         border-radius: 10px;
         @include box-shadow(0px 0px 20px 0px $dodger-blue-faded);
+        cursor: pointer;
       }
     }
     
