--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -112,18 +112,27 @@
       justify-content: center;
       padding-top: 30px;
     }
+
+
+
+    .fade-in {
+      transition: all 0.4s ease 0s;
+    }
   
     .skills {
-      margin: 10px;
-      font-size: 75px;
+      // margin: 10px;
+      // font-size: 75px;
       border: 2.7px solid $cornflower-faded;
-      text-align: center;
+      // text-align: center;
       border-radius: 10px;
-      line-height: 1.6;
-      transition: all 0.4s ease 0s;
+      // line-height: 1.6;
+  
       @include box-shadow(2px 3px 2px 1px $endeavour-faded);
-      height: 2em;
-      // transform: rotateY(180deg);
+      height: 9em;
+      width: 10em;
+
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
     
       .skill-container {
   
@@ -132,11 +141,13 @@
         align-items: center;
         height: 100%;
 
+        // transform: rotateY(180deg);
+       
+
         &.flipped {
           background-color: $endeavour-faded;
           height: 100%;
-          // transition: transform 0.8s;
-          // transform-style: preserve-3d;
+          
     
 
           .skill-details {
@@ -149,6 +160,11 @@
               font-style: italic;
             }
           }
+        }
+
+        &.icon {
+          // transform: rotateY(180deg);
+          font-size: 75px;
         }
       }
     
@@ -173,3 +189,47 @@
   }
 }
 
+
+.skc-skill-container {
+  width: 200px;
+  height: 260px;
+  border: 1px solid #CCC;
+  margin: 40px 0;
+  perspective: 600px;
+}
+
+.skc-skill-card {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+  border: 7px solid black;
+
+  &.is-flipped {
+    transform: rotateY(180deg);
+  }
+}
+
+.skc-skill-card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 260px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  &.front {
+    background: red;
+  }
+
+  &.back {
+    background: blue;
+    transform: rotateY(180deg);
+  }
+}
