Task code cleanup.

--- a/styles/components/about/_skillcard.scss
+++ b/styles/components/about/_skillcard.scss
@@ -53,7 +53,7 @@
   }
 
   &.back {
-    background: #2f82e266; //#0c58af8f;
+    background: $royal-blue-faded-2;
     transform: rotateY(180deg);
     border-radius:  8px;
   }
