--- a/styles/shared/_colors.scss
+++ b/styles/shared/_colors.scss
@@ -19,6 +19,8 @@ $green-faded: #00ff00ab;
 $mariner-faded: #2b72d4a6;
 $matisse-faded: #1d5390f0;
 $royal-blue-faded: #4583eaa8;
+$royal-blue-faded-2: #2f82e266;
 $san-juan-faded: #344c795d;
 $seagull-faded: #73ade6e1;
 $stratos-faded: #000b4269;
+$tory-blue-faded: #0c58af8f;
