--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -1,4 +1,5 @@
 @import 'react-vertical-timeline-component/style.min.css';
+@import '@/styles/mixins';
 
 .resume-page {
   padding-top: 150px;
@@ -9,7 +10,9 @@
   }
 
   .resume-image {
-    // @include animation-delay(0.3s);
+    @include animation(fadein 2s);
+    @include animation-fill-mode(forwards);
+
     display: flex;
     justify-content: center;
     align-items: center;
