--- a/styles/components/about/_skillcard.scss
+++ b/styles/components/about/_skillcard.scss
@@ -10,6 +10,10 @@
   transition: transform 1s;
   transform-style: preserve-3d;
   display: flex;
+
+  @media (max-width: 991px) {
+    
+  }
 }
 
 .skill-card-inner {
