--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -24,6 +24,10 @@
 
       &.bg {
         opacity: 50%;
+
+        @media (max-width: 991px) {
+          opacity: 30%;
+        }
       }
     }
   }
@@ -61,17 +65,9 @@
     margin-bottom: 55px;
 
     @media (max-width: 991px) {
-      font-size: 46px;
+      font-size: 42px;
     }
   }
-
-  // @media (max-width: 991px) {
-  //   .headline {
-  //     .title {
-  //       font-size: 53px;
-  //     }
-  //   }
-  // }
 
   .subtitle {
     @include animation-delay(2.2s);
@@ -82,14 +78,6 @@
       font-size: 20px;
     }
   }
-
-  // @media (max-width: 991px) {
-  //   .headline {
-  //     .subtitle {
-  //       font-size: 26px;
-  //     }
-  //   }
-  // }
 
   .subsubTitle {
     @include animation-delay(3.6s);
@@ -103,7 +91,6 @@
 
     .skills-icons-row {
       justify-content: center;
-      padding-top: 30px;
       display: inline-flex;
       flex-direction: row;
       flex-wrap: wrap;
