--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,4 +62,12 @@ html, body {
   color: $white;
   font-weight: bold;
   letter-spacing: 2px;
+
+  @media (max-width: 1025px) {
+    font-size: 36px;
+  }
+
+  @media (max-width: 991px) {
+    font-size: 26px;
+  }
 }
