Update resume page image margin.

--- a/styles/pages/_resume.scss
+++ b/styles/pages/_resume.scss
@@ -22,6 +22,10 @@
       position: absolute;
       margin-top: 13em;
 
+      @media (max-width: 991px) {
+        margin-top: 9em;
+      }
+
       &.bg {
         opacity: 50%;
 
