Update image margins.

--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -22,6 +22,10 @@
       position: absolute;
       margin-top: 7em;
 
+      @media (max-width: 991px) {
+        margin-top: 3em;
+      }
+
       &.bg {
         opacity: 50%;
 
